--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -49,3 +49,19 @@ html {
   bottom: 20pt;
   z-index: 1000;
 }
+
+.search-container {
+  width: min(100%, 400pt);
+  position: relative;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-result {
+  border: 1px solid #eaeaea;
+  padding: 4pt;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+}
