--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,9 +1,20 @@
 body,
 html {
   margin: 0;
+  font-family: 'nilland';
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+@font-face {
+  font-family: 'nilland';
+  src: url("./graphics/nilland/Nilland.ttf");
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url("./graphics/roboto/roboto.ttf");
+}
 
 #root {
   position: absolute;
@@ -20,6 +31,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: 'nilland';
 }
 
 .top-bar {
@@ -48,10 +60,6 @@ html {
   transform: translate(-50%, 0);
   display: flex;
   flex-direction: column;
-}
-
-.search-container.btn-primary {
-  background: url("./graphics/search-button.svg")
 }
 
 .search-results-container {
@@ -141,6 +149,7 @@ $control-center-radius: 30pt;
   backdrop-filter: blur(100px);
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.15);
   //backdrop-filter: brightness(100%);
+  font-family: 'nilland';
 }
 
 .control-panel-footer {
