--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   font-family: 'nilland';
+  background-color: #eaeaea;
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -113,7 +114,7 @@ $control-center-radius: 30pt;
   height: 2 * $control-center-radius;
   width: 2 * $control-center-radius;
   //border: 1px solid black;
-  background: url("./graphics/dome.svg");
+  background-image: url("./graphics/dome.svg");
   background-repeat: no-repeat;
   background-position: center;
   bottom: 4pt;
@@ -123,6 +124,10 @@ $control-center-radius: 30pt;
   justify-content: center;
   align-items: center;
   //transform: translate(-50%, 0);
+}
+
+.control-center:active {
+  filter: brightness(.5);
 }
 
 .control-panel {
